--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <h2 class="title">Envie sua mensagem</h2>
 
-            <form action="" method="get">
+            <form action="obrigado.html" method="get">
 
                 <input type="text" name="name" placeholder="Seu nome">
                 <input type="email" name="email" placeholder="Seu e-mail">
